--- a/public/index.html
+++ b/public/index.html
@@ -27,10 +27,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
-    <title>React App</title>
+    <title>Alenbeza charity </title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>መስጠትን ሲሰጠን ነው የምንሰጠው</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
